Stop using BlobStatus::ERR_FILE_WRITE_FAILED for two unrelated reasons.

Instead introduce ERR_REFERENCED_FILE_UNAVAILABLE for the case where a
blob tries to reference a file it doesn't have access to.

Bug: 740730
Change-Id: I66616c5fcfcbf788a53d1a22fb0b2af618edffb5
Reviewed-on: https://chromium-review.googlesource.com/860279
Commit-Queue: Daniel Murphy <dmurph@chromium.org>
Reviewed-by: Daniel Murphy <dmurph@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528443}
Former-commit-id: 4f28782d5fe8e508e75f82e49c78b4fbc060c8de